Vezba 5/2/synsem.output
Grammar

    0 $accept: program $end

    1 program: function_list

    2 function_list: function
    3              | function_list function

    4 $@1: %empty

    5 $@2: %empty

    6 function: type _ID $@1 _LPAREN parameter _RPAREN $@2 body

    7 type: _TYPE

    8 parameter: %empty
    9          | type _ID

   10 body: _LBRACKET variable_list statement_list _RBRACKET

   11 variable_list: %empty
   12              | variable_list variable

   13 variable: type _ID _SEMICOLON

   14 statement_list: %empty
   15               | statement_list statement

   16 statement: compound_statement
   17          | assignment_statement
   18          | if_statement
   19          | return_statement
   20          | arop_statement

   21 arop_statement: _ID _INCREMENT _SEMICOLON

   22 compound_statement: _LBRACKET statement_list _RBRACKET

   23 assignment_statement: _ID _ASSIGN num_exp e _SEMICOLON

   24 e: %empty
   25  | _ID _INCREMENT

   26 num_exp: exp
   27        | num_exp _AROP exp

   28 exp: literal
   29    | _ID
   30    | function_call
   31    | _LPAREN num_exp _RPAREN

   32 literal: _INT_NUMBER
   33        | _UINT_NUMBER

   34 $@3: %empty

   35 function_call: _ID $@3 _LPAREN argument _RPAREN

   36 argument: %empty
   37         | num_exp

   38 if_statement: if_part
   39             | if_part _ELSE statement

   40 if_part: _IF _LPAREN rel_exp _RPAREN statement

   41 rel_exp: num_exp _RELOP num_exp

   42 return_statement: _RETURN num_exp _SEMICOLON


Terminals, with rules where they appear

$end (0) 0
error (256)
_TYPE (258) 7
_IF (259) 40
_ELSE (260) 39
_RETURN (261) 42
_ID (262) 6 9 13 21 23 25 29 35
_INT_NUMBER (263) 32
_UINT_NUMBER (264) 33
_LPAREN (265) 6 31 35 40
_RPAREN (266) 6 31 35 40
_LBRACKET (267) 10 22
_RBRACKET (268) 10 22
_ASSIGN (269) 23
_SEMICOLON (270) 13 21 23 42
_AROP (271) 27
_RELOP (272) 41
_INCREMENT (273) 21 25
ONLY_IF (274)


Nonterminals, with rules where they appear

$accept (20)
    on left: 0
program (21)
    on left: 1, on right: 0
function_list (22)
    on left: 2 3, on right: 1 3
function (23)
    on left: 6, on right: 2 3
$@1 (24)
    on left: 4, on right: 6
$@2 (25)
    on left: 5, on right: 6
type (26)
    on left: 7, on right: 6 9 13
parameter (27)
    on left: 8 9, on right: 6
body (28)
    on left: 10, on right: 6
variable_list (29)
    on left: 11 12, on right: 10 12
variable (30)
    on left: 13, on right: 12
statement_list (31)
    on left: 14 15, on right: 10 15 22
statement (32)
    on left: 16 17 18 19 20, on right: 15 39 40
arop_statement (33)
    on left: 21, on right: 20
compound_statement (34)
    on left: 22, on right: 16
assignment_statement (35)
    on left: 23, on right: 17
e (36)
    on left: 24 25, on right: 23
num_exp (37)
    on left: 26 27, on right: 23 27 31 37 41 42
exp (38)
    on left: 28 29 30 31, on right: 26 27
literal (39)
    on left: 32 33, on right: 28
function_call (40)
    on left: 35, on right: 30
$@3 (41)
    on left: 34, on right: 35
argument (42)
    on left: 36 37, on right: 35
if_statement (43)
    on left: 38 39, on right: 18
if_part (44)
    on left: 40, on right: 38 39
rel_exp (45)
    on left: 41, on right: 40
return_statement (46)
    on left: 42, on right: 19


State 0

    0 $accept: . program $end

    _TYPE  shift, and go to state 1

    program        go to state 2
    function_list  go to state 3
    function       go to state 4
    type           go to state 5


State 1

    7 type: _TYPE .

    $default  reduce using rule 7 (type)


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

    1 program: function_list .
    3 function_list: function_list . function

    _TYPE  shift, and go to state 1

    $default  reduce using rule 1 (program)

    function  go to state 7
    type      go to state 5


State 4

    2 function_list: function .

    $default  reduce using rule 2 (function_list)


State 5

    6 function: type . _ID $@1 _LPAREN parameter _RPAREN $@2 body

    _ID  shift, and go to state 8


State 6

    0 $accept: program $end .

    $default  accept


State 7

    3 function_list: function_list function .

    $default  reduce using rule 3 (function_list)


State 8

    6 function: type _ID . $@1 _LPAREN parameter _RPAREN $@2 body

    $default  reduce using rule 4 ($@1)

    $@1  go to state 9


State 9

    6 function: type _ID $@1 . _LPAREN parameter _RPAREN $@2 body

    _LPAREN  shift, and go to state 10


State 10

    6 function: type _ID $@1 _LPAREN . parameter _RPAREN $@2 body

    _TYPE  shift, and go to state 1

    $default  reduce using rule 8 (parameter)

    type       go to state 11
    parameter  go to state 12


State 11

    9 parameter: type . _ID

    _ID  shift, and go to state 13


State 12

    6 function: type _ID $@1 _LPAREN parameter . _RPAREN $@2 body

    _RPAREN  shift, and go to state 14


State 13

    9 parameter: type _ID .

    $default  reduce using rule 9 (parameter)


State 14

    6 function: type _ID $@1 _LPAREN parameter _RPAREN . $@2 body

    $default  reduce using rule 5 ($@2)

    $@2  go to state 15


State 15

    6 function: type _ID $@1 _LPAREN parameter _RPAREN $@2 . body

    _LBRACKET  shift, and go to state 16

    body  go to state 17


State 16

   10 body: _LBRACKET . variable_list statement_list _RBRACKET

    $default  reduce using rule 11 (variable_list)

    variable_list  go to state 18


State 17

    6 function: type _ID $@1 _LPAREN parameter _RPAREN $@2 body .

    $default  reduce using rule 6 (function)


State 18

   10 body: _LBRACKET variable_list . statement_list _RBRACKET
   12 variable_list: variable_list . variable

    _TYPE  shift, and go to state 1

    $default  reduce using rule 14 (statement_list)

    type            go to state 19
    variable        go to state 20
    statement_list  go to state 21


State 19

   13 variable: type . _ID _SEMICOLON

    _ID  shift, and go to state 22


State 20

   12 variable_list: variable_list variable .

    $default  reduce using rule 12 (variable_list)


State 21

   10 body: _LBRACKET variable_list statement_list . _RBRACKET
   15 statement_list: statement_list . statement

    _IF        shift, and go to state 23
    _RETURN    shift, and go to state 24
    _ID        shift, and go to state 25
    _LBRACKET  shift, and go to state 26
    _RBRACKET  shift, and go to state 27

    statement             go to state 28
    arop_statement        go to state 29
    compound_statement    go to state 30
    assignment_statement  go to state 31
    if_statement          go to state 32
    if_part               go to state 33
    return_statement      go to state 34


State 22

   13 variable: type _ID . _SEMICOLON

    _SEMICOLON  shift, and go to state 35


State 23

   40 if_part: _IF . _LPAREN rel_exp _RPAREN statement

    _LPAREN  shift, and go to state 36


State 24

   42 return_statement: _RETURN . num_exp _SEMICOLON

    _ID           shift, and go to state 37
    _INT_NUMBER   shift, and go to state 38
    _UINT_NUMBER  shift, and go to state 39
    _LPAREN       shift, and go to state 40

    num_exp        go to state 41
    exp            go to state 42
    literal        go to state 43
    function_call  go to state 44


State 25

   21 arop_statement: _ID . _INCREMENT _SEMICOLON
   23 assignment_statement: _ID . _ASSIGN num_exp e _SEMICOLON

    _ASSIGN     shift, and go to state 45
    _INCREMENT  shift, and go to state 46


State 26

   22 compound_statement: _LBRACKET . statement_list _RBRACKET

    $default  reduce using rule 14 (statement_list)

    statement_list  go to state 47


State 27

   10 body: _LBRACKET variable_list statement_list _RBRACKET .

    $default  reduce using rule 10 (body)


State 28

   15 statement_list: statement_list statement .

    $default  reduce using rule 15 (statement_list)


State 29

   20 statement: arop_statement .

    $default  reduce using rule 20 (statement)


State 30

   16 statement: compound_statement .

    $default  reduce using rule 16 (statement)


State 31

   17 statement: assignment_statement .

    $default  reduce using rule 17 (statement)


State 32

   18 statement: if_statement .

    $default  reduce using rule 18 (statement)


State 33

   38 if_statement: if_part .
   39             | if_part . _ELSE statement

    _ELSE  shift, and go to state 48

    $default  reduce using rule 38 (if_statement)


State 34

   19 statement: return_statement .

    $default  reduce using rule 19 (statement)


State 35

   13 variable: type _ID _SEMICOLON .

    $default  reduce using rule 13 (variable)


State 36

   40 if_part: _IF _LPAREN . rel_exp _RPAREN statement

    _ID           shift, and go to state 37
    _INT_NUMBER   shift, and go to state 38
    _UINT_NUMBER  shift, and go to state 39
    _LPAREN       shift, and go to state 40

    num_exp        go to state 49
    exp            go to state 42
    literal        go to state 43
    function_call  go to state 44
    rel_exp        go to state 50


State 37

   29 exp: _ID .
   35 function_call: _ID . $@3 _LPAREN argument _RPAREN

    _LPAREN   reduce using rule 34 ($@3)
    $default  reduce using rule 29 (exp)

    $@3  go to state 51


State 38

   32 literal: _INT_NUMBER .

    $default  reduce using rule 32 (literal)


State 39

   33 literal: _UINT_NUMBER .

    $default  reduce using rule 33 (literal)


State 40

   31 exp: _LPAREN . num_exp _RPAREN

    _ID           shift, and go to state 37
    _INT_NUMBER   shift, and go to state 38
    _UINT_NUMBER  shift, and go to state 39
    _LPAREN       shift, and go to state 40

    num_exp        go to state 52
    exp            go to state 42
    literal        go to state 43
    function_call  go to state 44


State 41

   27 num_exp: num_exp . _AROP exp
   42 return_statement: _RETURN num_exp . _SEMICOLON

    _SEMICOLON  shift, and go to state 53
    _AROP       shift, and go to state 54


State 42

   26 num_exp: exp .

    $default  reduce using rule 26 (num_exp)


State 43

   28 exp: literal .

    $default  reduce using rule 28 (exp)


State 44

   30 exp: function_call .

    $default  reduce using rule 30 (exp)


State 45

   23 assignment_statement: _ID _ASSIGN . num_exp e _SEMICOLON

    _ID           shift, and go to state 37
    _INT_NUMBER   shift, and go to state 38
    _UINT_NUMBER  shift, and go to state 39
    _LPAREN       shift, and go to state 40

    num_exp        go to state 55
    exp            go to state 42
    literal        go to state 43
    function_call  go to state 44


State 46

   21 arop_statement: _ID _INCREMENT . _SEMICOLON

    _SEMICOLON  shift, and go to state 56


State 47

   15 statement_list: statement_list . statement
   22 compound_statement: _LBRACKET statement_list . _RBRACKET

    _IF        shift, and go to state 23
    _RETURN    shift, and go to state 24
    _ID        shift, and go to state 25
    _LBRACKET  shift, and go to state 26
    _RBRACKET  shift, and go to state 57

    statement             go to state 28
    arop_statement        go to state 29
    compound_statement    go to state 30
    assignment_statement  go to state 31
    if_statement          go to state 32
    if_part               go to state 33
    return_statement      go to state 34


State 48

   39 if_statement: if_part _ELSE . statement

    _IF        shift, and go to state 23
    _RETURN    shift, and go to state 24
    _ID        shift, and go to state 25
    _LBRACKET  shift, and go to state 26

    statement             go to state 58
    arop_statement        go to state 29
    compound_statement    go to state 30
    assignment_statement  go to state 31
    if_statement          go to state 32
    if_part               go to state 33
    return_statement      go to state 34


State 49

   27 num_exp: num_exp . _AROP exp
   41 rel_exp: num_exp . _RELOP num_exp

    _AROP   shift, and go to state 54
    _RELOP  shift, and go to state 59


State 50

   40 if_part: _IF _LPAREN rel_exp . _RPAREN statement

    _RPAREN  shift, and go to state 60


State 51

   35 function_call: _ID $@3 . _LPAREN argument _RPAREN

    _LPAREN  shift, and go to state 61


State 52

   27 num_exp: num_exp . _AROP exp
   31 exp: _LPAREN num_exp . _RPAREN

    _RPAREN  shift, and go to state 62
    _AROP    shift, and go to state 54


State 53

   42 return_statement: _RETURN num_exp _SEMICOLON .

    $default  reduce using rule 42 (return_statement)


State 54

   27 num_exp: num_exp _AROP . exp

    _ID           shift, and go to state 37
    _INT_NUMBER   shift, and go to state 38
    _UINT_NUMBER  shift, and go to state 39
    _LPAREN       shift, and go to state 40

    exp            go to state 63
    literal        go to state 43
    function_call  go to state 44


State 55

   23 assignment_statement: _ID _ASSIGN num_exp . e _SEMICOLON
   27 num_exp: num_exp . _AROP exp

    _ID    shift, and go to state 64
    _AROP  shift, and go to state 54

    $default  reduce using rule 24 (e)

    e  go to state 65


State 56

   21 arop_statement: _ID _INCREMENT _SEMICOLON .

    $default  reduce using rule 21 (arop_statement)


State 57

   22 compound_statement: _LBRACKET statement_list _RBRACKET .

    $default  reduce using rule 22 (compound_statement)


State 58

   39 if_statement: if_part _ELSE statement .

    $default  reduce using rule 39 (if_statement)


State 59

   41 rel_exp: num_exp _RELOP . num_exp

    _ID           shift, and go to state 37
    _INT_NUMBER   shift, and go to state 38
    _UINT_NUMBER  shift, and go to state 39
    _LPAREN       shift, and go to state 40

    num_exp        go to state 66
    exp            go to state 42
    literal        go to state 43
    function_call  go to state 44


State 60

   40 if_part: _IF _LPAREN rel_exp _RPAREN . statement

    _IF        shift, and go to state 23
    _RETURN    shift, and go to state 24
    _ID        shift, and go to state 25
    _LBRACKET  shift, and go to state 26

    statement             go to state 67
    arop_statement        go to state 29
    compound_statement    go to state 30
    assignment_statement  go to state 31
    if_statement          go to state 32
    if_part               go to state 33
    return_statement      go to state 34


State 61

   35 function_call: _ID $@3 _LPAREN . argument _RPAREN

    _ID           shift, and go to state 37
    _INT_NUMBER   shift, and go to state 38
    _UINT_NUMBER  shift, and go to state 39
    _LPAREN       shift, and go to state 40

    $default  reduce using rule 36 (argument)

    num_exp        go to state 68
    exp            go to state 42
    literal        go to state 43
    function_call  go to state 44
    argument       go to state 69


State 62

   31 exp: _LPAREN num_exp _RPAREN .

    $default  reduce using rule 31 (exp)


State 63

   27 num_exp: num_exp _AROP exp .

    $default  reduce using rule 27 (num_exp)


State 64

   25 e: _ID . _INCREMENT

    _INCREMENT  shift, and go to state 70


State 65

   23 assignment_statement: _ID _ASSIGN num_exp e . _SEMICOLON

    _SEMICOLON  shift, and go to state 71


State 66

   27 num_exp: num_exp . _AROP exp
   41 rel_exp: num_exp _RELOP num_exp .

    _AROP  shift, and go to state 54

    $default  reduce using rule 41 (rel_exp)


State 67

   40 if_part: _IF _LPAREN rel_exp _RPAREN statement .

    $default  reduce using rule 40 (if_part)


State 68

   27 num_exp: num_exp . _AROP exp
   37 argument: num_exp .

    _AROP  shift, and go to state 54

    $default  reduce using rule 37 (argument)


State 69

   35 function_call: _ID $@3 _LPAREN argument . _RPAREN

    _RPAREN  shift, and go to state 72


State 70

   25 e: _ID _INCREMENT .

    $default  reduce using rule 25 (e)


State 71

   23 assignment_statement: _ID _ASSIGN num_exp e _SEMICOLON .

    $default  reduce using rule 23 (assignment_statement)


State 72

   35 function_call: _ID $@3 _LPAREN argument _RPAREN .

    $default  reduce using rule 35 (function_call)
